<resources>
    <string name="text_complete">完成</string>
    <string name="text_print_preview">打印预览</string>
    <string name="text_back">返回</string>
    <string name="text_adjust">调整</string>
    <string name="text_filter">滤镜</string>
    <string name="text_crop">裁剪</string>
    <string name="text_frame">相框</string>
    <string name="text_sticker">贴纸</string>
    <string name="text_text">文字</string>
    <string name="text_brightness">亮度</string>
    <string name="text_contrast">对比度</string>
    <string name="text_ratio">饱和度</string>
    <string name="text_sharp">锐化</string>
    <string name="text_exposure">曝光</string>
    <string name="text_shadown">阴影</string>
    <string name="text_color_temperature">色温</string>
    <string name="text_dark_angle">暗角</string>
    <string name="text_image_no_find">图片无法找到</string>
    <string name="text_color">文字颜色</string>
    <string name="text_style">样式</string>
    <string name="text_font">字体</string>
    <string name="base_sure">确认</string>
    <string name="base_close">关闭</string>
    <string name="tip_enter_content">点击输入文字</string>
    <string name="text_bubble">气泡</string>
    <string name="text_color_type_default">文</string>
    <string name="text_color_type_shadow">阴</string>

    <string-array name="filters">
        <item>原始</item>
        <item>软化</item>
        <item>黑白</item>
        <item>经典</item>
        <item>华丽</item>
        <item>复古</item>
        <item>优雅</item>
        <item>电影</item>
        <item>回忆</item>
        <item>优格</item>
        <item>流年</item>
        <item>发光</item>
        <item>马赛克</item>
    </string-array>

</resources>