<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.yunianshu.library.ui.words.TextViewModel" />

        <variable
            name="click"
            type="com.yunianshu.library.ui.words.TextFragment.TextClickProxy" />

        <variable
            name="adapter"
            type="com.yunianshu.library.adapter.RgAdapter" />

    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            tools:context=".ui.crop.FilterActivity">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/viewPager22">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/padding_4dp"
                    android:gravity="center"
                    android:onClick="@{()->click.textBubble()}"
                    android:padding="10dp"
                    android:text="@string/text_bubble"
                    android:textColor='@{vm.editType == 0?@color/base_color:@color/black_overlay}'
                    android:textSize='@{vm.editType == 0?@dimen/sp_16:@dimen/sp_14}' />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{()->click.textStyle()}"
                    android:padding="10dp"
                    android:text="@string/text_style"
                    android:textColor='@{vm.editType == 1?@color/base_color:@color/black_overlay}'
                    android:textSize='@{vm.editType == 1?@dimen/sp_16:@dimen/sp_14}' />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{()->click.textFont()}"
                    android:padding="10dp"
                    android:text="@string/text_font"
                    android:textColor='@{vm.editType == 2?@color/base_color:@color/black_overlay}'
                    android:textSize='@{vm.editType == 2?@dimen/sp_16:@dimen/sp_14}' />
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager22"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                adapter="@{adapter}"
                useEnable="@{false}"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>