<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.yunianshu.library.ui.text.TextViewModel" />
        <variable
            name="shareVM"
            type="com.yunianshu.library.ShareViewModel" />
        <variable
            name="click"
            type="com.yunianshu.library.view.ModifyTextContentDialog.DialogTextClickProxy" />
        <variable
            name="adapter"
            type="com.yunianshu.library.adapter.RgAdapter" />
    </data>
    <LinearLayout
        android:id="@+id/edit_ll_input_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white">

            <com.yunianshu.library.view.ClearEditText
                android:id="@+id/edit_et_input_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/input_content_edit_bg_shape"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="#4E4C56"
                android:textColorHint="#C0BFC4"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_iv_finish"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:hint="@string/tip_enter_content" />

            <TextView
                android:id="@+id/edit_iv_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@drawable/base_selector_black_corners_pressed"
                android:paddingHorizontal="15dp"
                android:paddingVertical="4dp"
                android:text="@string/base_sure"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_et_input_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/viewPager22">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/padding_4dp"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="@{()->click.keyboard()}"
                android:text="键盘"
                android:textColor='@{vm.editType == 0?@color/base_color:@color/black_overlay}'
                android:textSize='@{vm.editType == 0?@dimen/sp_16:@dimen/sp_14}' />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_style"
                android:onClick="@{()->click.textStyle()}"
                android:textColor='@{vm.editType == 1?@color/base_color:@color/black_overlay}'
                android:textSize='@{vm.editType == 1?@dimen/sp_16:@dimen/sp_14}' />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="@{()->click.textFont()}"
                android:text="@string/text_font"
                android:textColor='@{vm.editType == 2?@color/base_color:@color/black_overlay}'
                android:textSize='@{vm.editType == 2?@dimen/sp_16:@dimen/sp_14}' />
        </LinearLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/textViewPager"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            adapter="@{adapter}"
            useEnable="@{false}"
            visiable="@{vm.editType > 0}"/>
    </LinearLayout>
</layout>
