<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
       <variable
           name="vm"
           type="com.yunianshu.library.PhotoShareViewModel" />
        <variable
            name="click"
            type="com.yunianshu.library.PhotoEditActivity.PhotoEditClickProxy" />
        <variable
            name="adapter"
            type="com.yunianshu.library.PhotoEditAdapter" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/base_color">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clickable="true"
                android:onClick="@{()->click.back()}"
                android:contentDescription="@string/text_back"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_btn_back"
                android:focusable="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_print_preview"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/text_complete"
                android:onClick="@{()->click.complete()}"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="236dp"
                android:layout_height="398dp"
                android:background="@color/white"
                android:padding="16dp"
                android:translationZ="5dp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/base_center_color"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                adapter="@{adapter}"
                submitList="@{vm.list}"
                tools:listitem="@layout/item_photo_edit"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
